--- a/deployment.yaml
+++ b/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: nginx
+      app: apache
   minReadySeconds: 5
   template:
     metadata:
