--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: apache
-        image: sandip525/apacheweb:latest
+        image: gcr.io/searce-playground-v1/rushabhapache
         ports:
         - containerPort: 5000
