--- a/02-ingress.yaml
+++ b/02-ingress.yaml
@@ -10,7 +10,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /*
+      - path: /v1
         pathType: ImplementationSpecific
         backend:
           service:
