--- a/manifest/01-deployment.yaml
+++ b/manifest/01-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: apache-web
+  namespace: rushabh-jenkins
 spec:
   selector:
     matchLabels:
@@ -23,6 +24,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: apache-web-service
+  namespace: rushabh-jenkins
 spec:
   type: LoadBalancer
   selector:
