--- a/jenks-charts/values.yaml
+++ b/jenks-charts/values.yaml
@@ -50,11 +50,11 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    #- host: chart-example.local
       paths:
         - path: /
           pathType: ImplementationSpecific
-  tls: []
+ # tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
